Fix rendering of overlapping agents

--- a/index.css
+++ b/index.css
@@ -89,9 +89,6 @@ html, body, #app {
 }
 
 .cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: relative;
   background: #fff;
   aspect-ratio: 1;
@@ -107,11 +104,20 @@ html, body, #app {
   );
 }
 
-.cell.hole {
+.cell > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.cell .hole {
   background: hsl(227, 76%, 56%);
 }
 
-.cell.dot::before {
+.cell .dot::after {
   display: block;
   content: "";
   width: 25%;
@@ -121,7 +127,7 @@ html, body, #app {
   border: 3px solid #fff;
 }
 
-.cell.pellet::before {
+.cell .pellet::after {
   display: block;
   content: "";
   width: 50%;
@@ -131,8 +137,8 @@ html, body, #app {
   border: 3px solid #fff;
 }
 
-.cell.player::after,
-.cell.enemy::after {
+.cell .player::after,
+.cell .enemy::after {
   content: "";
   position: absolute;
   z-index: 1;
@@ -148,33 +154,33 @@ html, body, #app {
   animation-fill-mode: forwards;
 }
 
-.cell.enemy.blinky::after { background-image: url("/assets/black-pawn-blinky.png"); }
-.cell.enemy.inky::after { background-image: url("/assets/black-pawn-inky.png"); }
-.cell.enemy.pinky::after { background-image: url("/assets/black-pawn-pinky.png"); }
-.cell.enemy.clyde::after { background-image: url("/assets/black-pawn-clyde.png"); }
+.cell .enemy.blinky::after { background-image: url("/assets/black-pawn-blinky.png"); }
+.cell .enemy.inky::after { background-image: url("/assets/black-pawn-inky.png"); }
+.cell .enemy.pinky::after { background-image: url("/assets/black-pawn-pinky.png"); }
+.cell .enemy.clyde::after { background-image: url("/assets/black-pawn-clyde.png"); }
 
-.cell.player.promoted::after {
+.cell .player.promoted::after {
   background-image: url("/assets/white-rook.png");
   animation-timing-function: linear;
 }
 
-.cell.player.transforming::after {
+.cell .player.transforming::after {
   animation-name: rubberBand !important;
   animation-play-state: running !important;
   animation-delay: 0s;
 }
 
-.cell.stopped::after { animation-play-state: paused; }
+.cell .stopped::after { animation-play-state: paused; }
 
-.cell.player.promoted.right::after { animation-name: rookMoveRight; }
-.cell.player.promoted.left::after { animation-name: rookMoveLeft; scale: -1 1; }
-.cell.player.promoted.up::after { animation-name: rookMoveUp; }
-.cell.player.promoted.down::after { animation-name: rookMoveDown; }
+.cell .player.promoted.right::after { animation-name: rookMoveRight; }
+.cell .player.promoted.left::after { animation-name: rookMoveLeft; scale: -1 1; }
+.cell .player.promoted.up::after { animation-name: rookMoveUp; }
+.cell .player.promoted.down::after { animation-name: rookMoveDown; }
 
-.cell:not(.promoted).right::after { animation-name: pawnMoveRight }
-.cell:not(.promoted).left::after { animation-name: pawnMoveLeft; scale: -1 1; }
-.cell:not(.promoted).up::after { animation-name: pawnMoveUp }
-.cell:not(.promoted).down::after { animation-name: pawnMoveDown }
+.cell :is(.enemy, .player:not(.promoted)).right::after { animation-name: pawnMoveRight }
+.cell :is(.enemy, .player:not(.promoted)).left::after { animation-name: pawnMoveLeft; scale: -1 1; }
+.cell :is(.enemy, .player:not(.promoted)).up::after { animation-name: pawnMoveUp }
+.cell :is(.enemy, .player:not(.promoted)).down::after { animation-name: pawnMoveDown }
 
 @keyframes rubberBand {
   0% { transform: scale(1, 1); }
